# oxc

./: Cargo.toml
.github/actions/changed-benchmarks/: action.yml
.github/actions/changed-benchmarks/inner/: action.yml  index.mjs  package.json  pnpm-lock.yaml
.github/actions/delete-artefacts/: action.yml  index.mjs  package.json  pnpm-lock.yaml
.github/workflows/: benchmark.yml  ci.yml  conformance.yml
assets/: oxc_wasm_bg--bBMnD2p.wasm  oxc_wasm_bg-478101d3.wasm  oxc_wasm_bg-AOmY_THR.wasm  oxc_wasm_bg-BdtIAjVz.wasm  oxc_wasm_bg-C3R_rz-J.wasm  oxc_wasm_bg-CaAv-rCy.wasm  oxc_wasm_bg-CnIi4k_L.wasm  oxc_wasm_bg-_UPamGNF.wasm  oxc_wasm_bg-d04649d7.wasm  oxc_wasm_bg-izFmkAOR.wasm  oxc_wasm_bg-kFjDq-dE.wasm  oxc_wasm_bg-kyMlGDbE.wasm  playground-1EI_MPjk.js  playground-316a17a4.js  playground-64305934.js  playground-BopKYbyU.js  playground-CBtl9k0m.js  playground-EmBoBSUC.js  playground-NcTEvj5N.js  playground-YXmGfmPn.js  playground-awXs7sFC.js  playground-d81bebe6.js  playground-j0om4HU2.js  playground-xxDQcDS_.js  playground-zdb4mAR6.js
crates/oxc_allocator/src/: lib.rs
crates/oxc_ast/src/: lib.rs
crates/oxc_ast/src/ast/: literal.rs  ts.rs
crates/oxc_atom/: Cargo.toml
crates/oxc_atom/src/: base54.rs  heap.rs  inline.rs  lib.rs  nonmax.rs
crates/oxc_minifier/src/: lib.rs
crates/oxc_minifier/src/mangler/: mod.rs
crates/oxc_parser/src/: cursor.rs  lib.rs
crates/oxc_parser/src/lexer/: byte_handlers.rs  bytes_iter.rs  identifier.rs  jsx.rs  kind.rs  misc.rs  mod.rs  numeric.rs  punctuation.rs  regex.rs  search.rs  source.rs  string.rs  string_builder.rs  template.rs  token.rs  typescript.rs  unicode.rs  whitespace.rs
crates/oxc_sourcemap/src/: lib.rs
crates/oxc_span/: Cargo.toml
crates/oxc_span/src/: atom.rs
crates/oxc_syntax/src/: identifier.rs  module_record.rs
crates/oxc_traverse/src/: context.rs  lib.rs
crates/test_leak/: Cargo.toml
crates/test_leak/src/: main.rs
crates/test_parser/: Cargo.toml
crates/test_parser/src/: main.rs
napi/parser/: Cargo.toml  package.json  parse.bench.mjs  pnpm-lock.yaml
playground/: index.html
tasks/benchmark/: Cargo.toml
tasks/benchmark/benches/: lexer.rs  parser_napi.rs  semantic.rs  wallclock.rs
tasks/benchmark/codspeed/: capture.mjs  create_temp_dir.mjs  generateFake.mjs  package.json  pnpm-lock.yaml  rerun_bench.mjs  template.out  upload.mjs
