[package]
name    = "test_parser"
version = "0.0.0"

[[bin]]
bench = false
name  = "test_parser"

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast       = { workspace = true, features = ["serde"] }
oxc_parser    = { workspace = true }
oxc_semantic  = { workspace = true }
oxc_span      = { workspace = true }
serde_json    = { workspace = true }
