[package]
name                  = "oxc_benchmark"
version               = "0.0.0"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[lints]
workspace = true

[lib]
test    = false
bench   = false
doctest = false

[[bench]]
name    = "lexer"
harness = false

[[bench]]
name    = "parser"
harness = false

[[bench]]
name    = "transformer"
harness = false

[[bench]]
name    = "semantic"
harness = false

[[bench]]
name    = "linter"
harness = false

[[bench]]
name    = "codegen_sourcemap"
harness = false

# Broken
# [[bench]]
# name    = "prettier"
# harness = false

[[bench]]
name    = "minifier"
harness = false

[dependencies]
oxc_allocator    = { workspace = true }
oxc_linter       = { workspace = true, optional = true }
oxc_minifier     = { workspace = true, optional = true }
oxc_parser       = { workspace = true, features = ["benchmarking"], optional = true }
oxc_prettier     = { workspace = true, optional = true }
oxc_semantic     = { workspace = true, optional = true }
oxc_span         = { workspace = true }
oxc_tasks_common = { workspace = true }
oxc_transformer  = { workspace = true, optional = true }
oxc_codegen      = { workspace = true, optional = true }

criterion = { package = "criterion2", version = "0.6.0", default-features = false }

[features]
default           = ["lexer", "parser", "transformer", "semantic", "linter", "codegen_sourcemap", "minifier", "prettier"]
lexer             = ["dep:oxc_parser"]
parser            = ["dep:oxc_parser"]
transformer       = ["dep:oxc_transformer", "dep:oxc_parser", "dep:oxc_semantic"]
semantic          = ["dep:oxc_semantic", "dep:oxc_parser"]
linter            = ["dep:oxc_linter", "dep:oxc_parser", "dep:oxc_semantic"]
codegen_sourcemap = ["dep:oxc_codegen", "dep:oxc_parser"]
minifier          = ["dep:oxc_minifier", "dep:oxc_parser"]
prettier          = ["dep:oxc_prettier", "dep:oxc_parser"]
codspeed          = ["criterion/codspeed"]
